--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorSub">#3d3d3d</color>
+    <color name="colorSub2">#929191</color>
     <color name="colorBase">#4cb6ac</color>
     <color name="colorLine">#429d94</color>
     <color name="colorTabLine">#d4d4d4</color>
     <color name="colorTLLine">#ededed</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorButtonBack">#4fa5d5</color>
 </resources>
