--- a/app/src/main/res/layout/activity_people_profile.xml
+++ b/app/src/main/res/layout/activity_people_profile.xml
@@ -6,66 +6,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="10dp"
     tools:context="com.example.tacademy.petpp.PeopleProfileActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
-
-        <Button
-            android:text="이전"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:id="@+id/onBACK"
-            android:onClick="onBACK"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="주인님이 궁금해요!"
-            android:textColor="#FFFFFF"
-            />
-
-        <Button
-            android:text="다음"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:onClick="onPProfileNext"
-            />
-
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/menu_top_header_layout"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/topMarginSize"
         android:layout_below="@+id/toolbar">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/personLinearLayout">
+        android:id="@+id/personLinearLayout"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_gravity="center"
-                    android:src="@mipmap/profile"
-                    android:onClick="onPImageView"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/img_people_profile"
+                android:onClick="onPImageView"/>
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@mipmap/btn_profile_camera"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/btn_profile_camera"
+                android:onClick="onPImageView"/>
+
+        </RelativeLayout>
 
                 <TextView
                     android:text="* 이름"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:id="@+id/textView4"
-                    android:paddingTop="10dp"/>
+                    android:layout_marginTop="33.9dp"/>
 
                 <EditText
                     android:layout_width="match_parent"
@@ -74,14 +64,14 @@
                     android:ems="10"
                     android:id="@+id/name_et"
                     android:background="@drawable/edittext_back_line"
-                    android:paddingTop="5dp"/>
+                    android:layout_marginTop="7.7dp"/>
 
                 <TextView
                     android:text="전화번호"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:id="@+id/textView6"
-                    android:paddingTop="10dp"/>
+                    android:layout_marginTop="30dp"/>
 
                 <EditText
                     android:layout_width="match_parent"
@@ -90,57 +80,65 @@
                     android:ems="10"
                     android:id="@+id/phone_et"
                     android:hint=" - 없이 입력 "
-                    android:paddingTop="5dp"
+                    android:layout_marginTop="7.7dp"
                     android:background="@drawable/edittext_back_line" />
 
-                <TextView
-                    android:text="* 나이"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:id="@+id/textView7"
-                    android:paddingTop="10dp"/>
+            <TextView
+                android:text="* 나이"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:id="@+id/textView7"
+                android:layout_marginTop="30dp"/>
 
-                <Spinner
+            <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:id="@+id/p_Spinner_age"
-                    android:paddingTop="5dp"/>
+                    android:layout_marginTop="7.7dp"/>
 
                 <TextView
                     android:text="* 성별"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView8"
-                    android:paddingTop="10dp"/>
+                    android:layout_marginTop="30dp"/>
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:id="@+id/p_Spinner_XY"
-                    android:paddingTop="5dp"/>
+                    android:layout_marginTop="7.7dp"/>
 
                 <TextView
                     android:text="주소"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView9"
-                    android:paddingTop="10dp"/>
+                    android:layout_marginTop="30dp"/>
 
-                <EditText
-                    android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:inputType="textPostalAddress"
-                    android:ems="10"
-                    android:background="@drawable/edittext_back_line"
-                    android:id="@+id/editText4"/>
+                    android:text="주소 검색"
+                    android:background="@color/colorBase" />
 
+                    <EditText
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:inputType="textPostalAddress"
+                        android:ems="10"
+                        android:background="@drawable/edittext_back_line"
+                        android:id="@+id/editText4"/>
 
-                <TextView
-                    android:text="나이랑 성별은 누르면 밑에 아이콘스코롤 느낌으로.선택지"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:id="@+id/textView" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
+
 </RelativeLayout>
