--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,94 +5,92 @@
     android:id="@+id/activity_setting"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tacademy.petpp.ui.leftmenu.SettingActivity">
+
+    <include layout="@layout/menu_top_header_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/topMarginSize">
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <TextView
+            android:text="공지사항"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="match_parent"
+            android:id="@+id/notify"
+            android:onClick="onNotify"
+            android:paddingTop="27dp"
+            android:paddingBottom="26.7dp"
+            android:layout_marginLeft="32dp"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/notifyImg"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="공지사항"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/notify"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:onClick="onVersion">
+            android:layout_height="1dp"
+            android:background="@color/colorTLLine"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/versionImg"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="버전정보"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/version"
-                android:layout_weight="1" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
+        <TextView
+            android:text="알림"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="match_parent"
+            android:id="@+id/alram"
+            android:onClick="onAlram"
+            android:paddingTop="27dp"
+            android:paddingBottom="26.7dp"
+            android:layout_marginLeft="32dp"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/alramImg"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="알림"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/alram"
-                android:layout_weight="1" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="1dp"
+            android:background="@color/colorTLLine"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/helperImg"
-                android:layout_weight="1" />
+        <TextView
+            android:text="고객센터/도움말"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/helper"
+            android:onClick="onHelper"
+            android:paddingTop="27dp"
+            android:paddingBottom="26.7dp"
+            android:layout_marginLeft="32dp"/>
 
-            <TextView
-                android:text="고객센터/도움말"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/helper"
-                android:layout_weight="1" />
-        </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorTLLine"/>
+
+        <TextView
+            android:text="버전정보"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/version"
+            android:onClick="onVersion"
+            android:paddingTop="27dp"
+            android:paddingBottom="26.7dp"
+            android:layout_marginLeft="32dp"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorTLLine"/>
+
+        <TextView
+            android:text="로그아웃"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/logout"
+            android:onClick="onLogout"
+            android:paddingTop="27dp"
+            android:paddingBottom="26.7dp"
+            android:layout_marginLeft="32dp"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorTLLine"/>
+
     </LinearLayout>
 </RelativeLayout>
