--- a/app/src/main/res/layout/activity_version.xml
+++ b/app/src/main/res/layout/activity_version.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_version"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.tacademy.petpp.ui.leftmenu.VersionActivity">
 
+    <include layout="@layout/menu_top_header_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_margin="40dp"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/topMarginSize"
+        android:paddingTop="30dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            app:srcCompat="@mipmap/ic_launcher"
+            android:src="@mipmap/img_03"
             android:id="@+id/imageView2" />
 
         <LinearLayout
