--- a/app/src/main/res/layout/fragment_my_view.xml
+++ b/app/src/main/res/layout/fragment_my_view.xml
@@ -8,22 +8,7 @@
         <GridView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/myPageGridView"
-            android:numColumns="3"/>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/myViewFab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            app:fabSize="mini"
-            app:srcCompat="@android:drawable/ic_dialog_email"
-            android:layout_marginRight="26dp"
-            android:layout_marginBottom="22dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="26dp"
-            android:visibility="invisible"/>
+            android:numColumns="3"
+            android:id="@+id/myPageGridView"></GridView>
 
 </FrameLayout>
